--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "4.8.4",
+    "react-icons": "3.7.0",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
+    "react-transition-group": "4.1.0",
     "redux": "4.0.1",
     "redux-promise-middleware": "6.1.0",
     "redux-thunk": "2.3.0",
